clean up game.js and index.html and include link to Mystic

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>THE EASTER EGG // CLASSIFIED</title>
+        <title>Happy Holidays from Mystic Coders!</title>
         <link
             href="https://fonts.googleapis.com/css2?family=VT323&family=Press+Start+2P&display=swap"
             rel="stylesheet"
@@ -508,33 +508,6 @@
                 border-color: var(--terminal-red);
             }
 
-            .cipher-wheel {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 20px;
-            }
-
-            .cipher-row {
-                display: flex;
-                gap: 5px;
-                font-size: 20px;
-            }
-
-            .cipher-letter {
-                width: 30px;
-                height: 35px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                border: 1px solid var(--terminal-green-dim);
-            }
-
-            .cipher-letter.highlight {
-                background: var(--terminal-green);
-                color: var(--bg-dark);
-            }
-
             .shift-control {
                 display: flex;
                 align-items: center;
@@ -576,58 +549,6 @@
                 color: var(--terminal-cyan);
             }
 
-            .wire-puzzle {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                padding: 20px;
-                position: relative;
-            }
-
-            .wire-column {
-                display: flex;
-                flex-direction: column;
-                gap: 20px;
-            }
-
-            .wire-node {
-                width: 60px;
-                height: 60px;
-                border: 3px solid var(--terminal-green);
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-family: "Press Start 2P", cursive;
-                font-size: 16px;
-                cursor: pointer;
-                transition: all 0.3s;
-                background: rgba(0, 0, 0, 0.5);
-            }
-
-            .wire-node:hover {
-                box-shadow: 0 0 20px var(--terminal-green);
-            }
-
-            .wire-node.selected {
-                background: var(--terminal-cyan);
-                color: var(--bg-dark);
-                border-color: var(--terminal-cyan);
-            }
-
-            .wire-node.connected {
-                background: var(--terminal-green);
-                color: var(--bg-dark);
-            }
-
-            .wire-canvas {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                pointer-events: none;
-            }
-
             .scrabble-tile {
                 width: 44px;
                 height: 52px;
@@ -663,80 +584,6 @@
 
             .scrabble-tile.space:hover {
                 transform: none;
-            }
-
-            .anagram-container {
-                text-align: center;
-            }
-
-            .anagram-tiles {
-                display: flex;
-                flex-wrap: wrap;
-                gap: 10px;
-                justify-content: center;
-                margin: 20px 0;
-            }
-
-            .anagram-tile {
-                width: 45px;
-                height: 55px;
-                background: linear-gradient(180deg, #2a2a4a 0%, #1a1a2a 100%);
-                border: 2px solid var(--terminal-green);
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-family: "Press Start 2P", cursive;
-                font-size: 18px;
-                cursor: pointer;
-                transition: all 0.2s;
-                user-select: none;
-            }
-
-            .anagram-tile:hover {
-                transform: translateY(-5px);
-                box-shadow: 0 5px 20px rgba(0, 255, 65, 0.4);
-            }
-
-            .anagram-tile.selected {
-                background: var(--terminal-green);
-                color: var(--bg-dark);
-                transform: scale(1.1);
-            }
-
-            .anagram-tile.locked {
-                opacity: 0.3;
-                cursor: not-allowed;
-            }
-
-            .answer-slots {
-                display: flex;
-                flex-wrap: wrap;
-                gap: 8px;
-                justify-content: center;
-                margin: 20px 0;
-                min-height: 65px;
-            }
-
-            .answer-slot {
-                width: 40px;
-                height: 50px;
-                border: 2px dashed var(--terminal-green-dim);
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-family: "Press Start 2P", cursive;
-                font-size: 16px;
-            }
-
-            .answer-slot.filled {
-                border-style: solid;
-                border-color: var(--terminal-cyan);
-                background: rgba(0, 255, 255, 0.1);
-            }
-
-            .answer-slot.space {
-                width: 20px;
-                border: none;
             }
 
             .ttt-cell {
@@ -839,19 +686,6 @@
                 color: var(--terminal-cyan);
             }
 
-            .hint-btn {
-                font-size: 10px;
-                padding: 8px 15px;
-                margin-top: 20px;
-                border-color: var(--terminal-amber);
-                color: var(--terminal-amber);
-            }
-
-            .hint-btn:hover {
-                background: var(--terminal-amber);
-                color: var(--bg-dark);
-            }
-
             .intro-text {
                 font-size: 20px;
                 line-height: 1.8;
@@ -913,21 +747,6 @@
                 }
                 .pattern-grid {
                     max-width: 240px;
-                }
-                .wire-node {
-                    width: 45px;
-                    height: 45px;
-                    font-size: 12px;
-                }
-                .anagram-tile {
-                    width: 35px;
-                    height: 45px;
-                    font-size: 14px;
-                }
-                .answer-slot {
-                    width: 30px;
-                    height: 40px;
-                    font-size: 12px;
                 }
             }
         </style>
@@ -1247,7 +1066,7 @@
                         <div class="terminal-btn yellow"></div>
                         <div class="terminal-btn green"></div>
                     </div>
-                    <div class="terminal-title">Terminal</div>
+                    <div class="terminal-title">Terminal by <a href="https://mysticcoders.com" target="_blank" style="color: var(--terminal-cyan); text-decoration: underline;">Mystic Coders</a></div>
                 </div>
 
                 <div class="terminal-body">
@@ -1263,9 +1082,7 @@
                         <div class="progress-connector"></div>
                         <div class="progress-node" data-stage="4">4</div>
                         <div class="progress-connector"></div>
-                        <div class="progress-node" data-stage="5">5</div>
-                        <div class="progress-connector"></div>
-                        <div class="progress-node" data-stage="6">★</div>
+                        <div class="progress-node" data-stage="5">★</div>
                     </div>
 
                     <!-- Stage 1: WOPR Backdoor -->
@@ -1434,111 +1251,6 @@
                         <audio id="strange-game" src="strange-game-how-about.mp3" preload="auto"></audio>
                     </div>
 
-                    <!-- Stage 6: Victory -->
-                    <div class="stage" id="stage6">
-                        <div class="final-reveal">
-                            <pre
-                                class="ascii-art"
-                                style="color: var(--terminal-green)"
-                            >
-███████╗ █████╗ ███████╗████████╗███████╗██████╗     ███████╗ ██████╗  ██████╗
-██╔════╝██╔══██╗██╔════╝╚══██╔══╝██╔════╝██╔══██╗    ██╔════╝██╔════╝ ██╔════╝
-█████╗  ███████║███████╗   ██║   █████╗  ██████╔╝    █████╗  ██║  ███╗██║  ███╗
-██╔══╝  ██╔══██║╚════██║   ██║   ██╔══╝  ██╔══██╗    ██╔══╝  ██║   ██║██║   ██║
-███████╗██║  ██║███████║   ██║   ███████╗██║  ██║    ███████╗╚██████╔╝╚██████╔╝
-╚══════╝╚═╝  ╚═╝╚══════╝   ╚═╝   ╚══════╝╚═╝  ╚═╝    ╚══════╝ ╚═════╝  ╚═════╝
-                      ███████╗ ██████╗ ██╗   ██╗███╗   ██╗██████╗
-                      ██╔════╝██╔═══██╗██║   ██║████╗  ██║██╔══██╗
-                      █████╗  ██║   ██║██║   ██║██╔██╗ ██║██║  ██║
-                      ██╔══╝  ██║   ██║██║   ██║██║╚██╗██║██║  ██║
-                      ██║     ╚██████╔╝╚██████╔╝██║ ╚████║██████╔╝
-                      ╚═╝      ╚═════╝  ╚═════╝ ╚═╝  ╚═══╝╚═════╝
-                        </pre
-                            >
-
-                            <div class="loading-bar" id="loadingBar">
-                                <div
-                                    class="loading-fill"
-                                    id="loadingFill"
-                                ></div>
-                                <span class="loading-text" id="loadingText"
-                                    >DECRYPTING...</span
-                                >
-                            </div>
-
-                            <div id="finalContent" style="display: none">
-                                <div class="access-granted">
-                                    ★ YOU FOUND THE EASTER EGG ★
-                                </div>
-
-                                <p class="status-line">
-                                    CONGRATULATIONS, GUNTER.
-                                </p>
-                                <p class="status-line">
-                                    HALLIDAY'S FINAL MESSAGE UNLOCKED...
-                                </p>
-                                <p
-                                    class="status-line"
-                                    style="color: var(--terminal-cyan)"
-                                >
-                                    "I created the OASIS because I never felt at
-                                    home in the real world."
-                                </p>
-                                <p
-                                    class="status-line"
-                                    style="color: var(--terminal-magenta)"
-                                >
-                                    But sometimes, the real treasure is the
-                                    journey itself...
-                                </p>
-
-                                <div
-                                    class="video-container"
-                                    style="margin-top: 30px"
-                                >
-                                    <iframe
-                                        id="rickVideo"
-                                        src=""
-                                        title="HALLIDAY'S EASTER EGG"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen
-                                    >
-                                    </iframe>
-                                </div>
-
-                                <p
-                                    style="
-                                        margin-top: 30px;
-                                        color: var(--terminal-amber);
-                                        font-family:
-                                            &quot;Press Start 2P&quot;, cursive;
-                                        font-size: 10px;
-                                    "
-                                >
-                                    THE ULTIMATE 80s ARTIFACT. YOU'VE BEEN
-                                    RICKROLLED.
-                                </p>
-                                <p
-                                    style="
-                                        margin-top: 10px;
-                                        color: var(--terminal-green-dim);
-                                        font-size: 14px;
-                                    "
-                                >
-                                    "Thanks for playing." — Halliday
-                                </p>
-
-                                <button
-                                    class="btn"
-                                    style="margin-top: 20px"
-                                    onclick="location.reload()"
-                                >
-                                    [ PLAY AGAIN ]
-                                </button>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -1750,9 +1462,6 @@
                 }
                 if (stage === 5) {
                     initWarGames();
-                }
-                if (stage === 6) {
-                    playFinalSequence();
                 }
             }
 
@@ -2876,60 +2585,6 @@
 
                 overlay.appendChild(iframe);
                 document.body.appendChild(overlay);
-            }
-
-            // Stage 6: Final Reveal
-            function playFinalSequence() {
-                const loadingFill = document.getElementById("loadingFill");
-                const loadingText = document.getElementById("loadingText");
-                const finalContent = document.getElementById("finalContent");
-
-                const steps = [
-                    { progress: 15, text: "ACCESSING OASIS ARCHIVES..." },
-                    { progress: 30, text: "BYPASSING THE GIBSON..." },
-                    { progress: 45, text: "DECRYPTING SETEC ASTRONOMY..." },
-                    { progress: 60, text: "CONSULTING DEEP THOUGHT..." },
-                    { progress: 75, text: "ANSWER: 42. LOADING..." },
-                    { progress: 90, text: "UNLOCKING HALLIDAY'S VAULT..." },
-                    { progress: 100, text: "EASTER EGG FOUND!" },
-                ];
-
-                let stepIndex = 0;
-
-                function nextStep() {
-                    if (stepIndex >= steps.length) {
-                        setTimeout(() => {
-                            document.getElementById(
-                                "loadingBar",
-                            ).style.display = "none";
-                            finalContent.style.display = "block";
-                            document.getElementById("rickVideo").src =
-                                "https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1";
-                        }, 500);
-                        return;
-                    }
-
-                    loadingFill.style.width = steps[stepIndex].progress + "%";
-                    loadingText.textContent = steps[stepIndex].text;
-                    stepIndex++;
-                    setTimeout(nextStep, 800);
-                }
-
-                nextStep();
-            }
-
-            // Hints
-            function showHint(stage) {
-                let hint = "";
-                switch (stage) {
-                    case 3:
-                        hint =
-                            "Julius Caesar used a shift of 3. Try that! The decoded message will be the start of a famous promise...";
-                        break;
-                }
-                if (hint) {
-                    alert("📟 HINT: " + hint);
-                }
             }
 
             // Keyboard support
