adding broderick-and-sheedy for an extra hint

--- a/index.html
+++ b/index.html
@@ -282,6 +282,9 @@
             .terminal-body {
                 padding: 30px;
                 min-height: 500px;
+                background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url('broderick-and-sheedy.jpg');
+                background-size: cover;
+                background-position: center;
             }
 
             .stage {
